# Toolboxv8

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  index.html
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py  web_main.py
backend/app/api/routes/: auth.py  dashboard.py  defensive.py  modules.py  pages.py  reports.py  users.py
backend/app/core/: auth.py  config.py  security.py
backend/app/models/: scan.py  user.py
backend/app/modules/defensive/: forensic.py  ids.py  response.py  siem.py
backend/app/modules/offensive/: exploit.py  passive_recon.py  post_exploit.py  recon.py  scan.py  web_scan.py
backend/app/reporting/: generator.py
backend/app/tasks/: celery_app.py  report_tasks.py  scan_tasks.py
backend/app/web/: proxy.py
backend/tests/: test_api.py
docker/: Dockerfile  Dockerfile.celery  docker-compose.yml
docker/caddy/: Caddyfile
docs/: README.md  api.md  architecture.md  guide_test_outils.txt  installation.md  livrables.md  modules.md  securite.md  usage.md
frontend/static/css/: app.css  main.css
frontend/static/js/: app.js  main.js
frontend/templates/: admin_users.html  base.html  dashboard.html  login.html  modules.html  report.html  reports.html  siem.html
scripts/: push_gitlab.ps1  push_gitlab.sh  start.ps1  start.sh
siem/elk/: elasticsearch.yml  logstash.conf
siem/snort/: local.rules  snort.conf
