[tool.poetry]
name = "toolbox-pentest"
version = "1.0.0"
description = "Toolbox automatisée de tests d'intrusion – Mastère Cybersécurité"
authors = ["Equipe PentestBox <pentest@mastere.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python             = "^3.11"
fastapi            = "^0.115.0"
uvicorn            = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy         = "^2.0.0"
alembic            = "^1.13.0"
psycopg2-binary    = "^2.9.9"
redis              = "^5.0.0"
celery             = "^5.4.0"
python-jose        = {extras = ["cryptography"], version = "^3.3.0"}
passlib            = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt             = ">=3.2.0,<4.0.0"
cryptography       = "^43.0.0"
python-multipart   = "^0.0.12"
jinja2             = "^3.1.0"
weasyprint         = "^62.0"
pillow             = ">=10.0.0,<11.0.0"
reportlab          = "^4.2.0"
matplotlib         = "^3.9.0"
python-nmap        = "^0.7.1"
minio              = "^7.2.0"
pydantic-settings  = "^2.4.0"
httpx              = "^0.27.0"
requests           = "^2.32.0"
email-validator    = "^2.2.0"
sslyze             = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest             = "^8.3.0"
pytest-asyncio     = "^0.24.0"
httpx              = "^0.27.0"
black              = "^24.8.0"
ruff               = "^0.6.0"
mypy               = "^1.11.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
